BUGFIX: The dir list now updates the scrollbars BUGFIX: Horizontal scrolling now works correctly

--- a/css/colors.dark.css
+++ b/css/colors.dark.css
@@ -75,6 +75,11 @@ body {
 	background: transparent !important;
 }
 
+.jspHorizontalBar {
+	height: 10px !important;
+	background: transparent !important;
+}
+
 .jspTrack {
 	background: transparent !important;
 }
@@ -84,4 +89,8 @@ body {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
+}
+
+.jspCorner {
+	display: none;
 }
